Second review of report

--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-conclusion.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-conclusion.tex
@@ -1,5 +1,5 @@
 \section{Conclusion}
-{\Large A long journey was made with Linux debugging, testing tools and documenting results. We have crossed through the userspace, then went exploring various tools like : \emph{GDB}, \emph{Valgrind}, \emph{strace} and \emph{ltrace}.\\
+ A long journey was made with Linux debugging, testing tools and documenting results. We have crossed through the userspace, then went exploring various tools like : \emph{GDB}, \emph{Valgrind}, \emph{strace} and \emph{ltrace}.\\
 
 We moved to Kernel-land and learnt to solve it's issues through debuggers (KGDB/KDB, Kernel oops and Magic SysRq). We provided a step by step guide for writing custom OpenOCD scripts for JTAG debugging (We also have made a wrapper tool to make it easier). 
 
@@ -15,7 +15,7 @@ Once again, We should stress out that debugging can save hours of trying to trou
 \vspace{7px}
 Reader must keep in mind that printf(printk) works great with small codes, however can overwhelm a system with messages, making it slow and even unresponsive. Industrial projects can goes beyond of million lines of code.\\
 
-}
+
 
 \begin{center}
 \color{red}
