--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-introduction.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-{\Large Embedded devices are increasingly popular, devices are becoming smaller, smarter, interactive striving for better user experience.\\
+ Embedded devices are increasingly popular, devices are becoming smaller, smarter, interactive striving for better user experience.\\
 
 Such a success was made possible since those tiny devices rely on UNIX-like operating systems (\textbf{Linux is the dominant}). 
 
@@ -22,5 +22,3 @@ We need mechanisms that can scale efficiently to track issues and bugs during de
 
 More can be said, as Linux is a multitasking and multiuser system. Every piece of code is checked for permissions. It
 does even distinguish between two distinct spaces : \textbf{userspace} and \textbf{kernel}. each has it's own operating privileges (\textbf{kernel does have all the privileges}) so they must be debugged differently.
-
-}
