--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
@@ -1,9 +1,24 @@
 \section{General view of internship}
 
 \subsection{Introducing company}
-\textbf{SMILE} (\textbf{\color{blue}\url{https://www.smile.eu/en}}) is the 1st integrator and European expert in open source solutions. 
+\textbf{SMILE} (\textbf{\color{blue}\url{https://www.smile.eu/en}}) is the 1st integrator and European expert in open source solutions (\textbf{Figure \ref{SMILE opensource company}}). 
 
-SMILE advertises 4 different services :
+			\begin{figure}[H]
+					\centering
+        			\includegraphics[scale=0.55]{img/smile.png}
+        			\caption{SMILE opensource company logo}
+        			\label{SMILE opensource company}
+   			 \end{figure}
+
+SMILE advertises 4 different services as shown in \textbf{Figure \ref{SMILE opensource services and associated opensource technologies}}.
+			\begin{figure}[H]
+					\centering
+        			\includegraphics[scale=0.55]{img/smile-services-technologies.png}
+        			\caption{SMILE-Opensource provided services and associated technologies}
+        			\label{SMILE opensource services and associated opensource technologies}
+   			 \end{figure}
+
+
 \begin{enumerate}
 	\item \textbf{DIGITAL : } a division which creates websites, mobile apps and collaborative software. 
 	\item \textbf{BUSINESS APPS : } the service collects all business activities of customers allowing them to get better insight into their data and be more efficient. 
@@ -43,7 +58,7 @@ The pre-requests of the internship are :
 The request document of the intership stressed out on experimenting and documenting the following points :
 
 \begin{enumerate}
-	\item \textbf{Userspace debugging methodologies : } mainly for C/C++ (using GDB, strace, ptrace, ltrace, valgrind)
+	\item \textbf{Userspace debugging methodologies : } mainly for C/C++ (\textit{using GDB, strace, ptrace, ltrace, valgrind}).
 	
 	\item \textbf{Kernel-land code debugging : } using KGDB/KDB, kernel oops, magic SysRQ, OpenOCD (with a focus on it's syntax).
 	
