--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-acknowledgement.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-acknowledgement.tex
@@ -11,10 +11,10 @@ First, I would start by thanking my tutor \og David GARRIOU \fg for his guidence
 Next, I want to say big thanks to my manager \og Antoine POUSSE \fg for encouraging, motivating and making me feel comfortable inside the company. \\
 \vspace{10px}
 
-I also want to thank all \og SMILE nantes \fg for making this internship possible and helping me to accomplish my project.\\
+I also want to thank all my colleagues at \og SMILE nantes \fg for making this internship possible and helping me to accomplish my project.\\
 
 \vspace{10px}
 Special thanks to my familly, my friends who were always on my side, sharing my happiness and misfortune.
 
 \vspace{20px}
-Lastly, I would like to thank University of western brittany (UBO) and it's staff for making me an complet engineer and boosting my potential and capabilities.
+Lastly, I would like to thank University of western brittany (UBO) and it's staff for making me an embedded system engineer and boosting my potential and capabilities.
