Reviewing Final Year project presentation

--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
@@ -19,12 +19,12 @@ SMILE advertises 4 different services as shown in \textbf{Figure \ref{SMILE open
    			 \end{figure}
 
 
-\begin{enumerate}
-	\item \textbf{DIGITAL : } a division which creates websites, mobile apps and collaborative software. 
-	\item \textbf{BUSINESS APPS : } the service collects all business activities of customers allowing them to get better insight into their data and be more efficient. 
-	\item \textbf{EMBEDDED \& IOT : } which builds software for innovative smart objects.
-	\item \textbf{OUTSOURCING : } specialized in private cloud computing. 
-\end{enumerate}
+\begin{itemize}
+	\item[$\bullet$] \textbf{DIGITAL : } a division which creates websites, mobile apps and collaborative software. 
+	\item[$\bullet$] \textbf{BUSINESS APPS : } the service collects all business activities of customers allowing them to get better insight into their data and be more efficient. 
+	\item[$\bullet$] \textbf{EMBEDDED \& IOT : } which builds software for innovative smart objects.
+	\item[$\bullet$] \textbf{OUTSOURCING : } specialized in private cloud computing. 
+\end{itemize}
 
 
 \begin{center} \color{red}
