Updating internship report

--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/final-year-project-defense-m2lse.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/final-year-project-defense-m2lse.tex
@@ -22,7 +22,7 @@
 \author{Jugurtha BELKALEM}
 \title{Debugging Linux OS \\ \vspace{20px} }
 %{\footnotesize \textcopyright \hspace{5px} Ce document est la propri\'et\'e exclusive de Smile et ne peut \^etre ni reproduit, ni communiqu\'e, sans autorisation pr\'ealable.}
-\date{\today}
+%\date{26/08/2018}
 
 \setcounter{secnumdepth}{4}
 
@@ -98,7 +98,7 @@ language        = Python,
 %----------------------------------------------------------------------------------------
 
 \textsc{\LARGE University of western Brittany}\\[1.5cm] % Name of your university/college
-\textsc{\Large Final Year Project Defense}\\[0.5cm] % Major heading such as course name
+\textsc{\Large Internship report}\\[0.5cm] % Major heading such as course name
 \textsc{\large Dive into practical Linux debugging}\\[0.5cm] % Minor heading such as course title
 
 %----------------------------------------------------------------------------------------
@@ -106,7 +106,7 @@ language        = Python,
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries Debugging Linux OS}\\[0.4cm] % Title of your document
+{ \huge \bfseries Debugging and tracing Linux OS}\\[0.4cm] % Title of your document
 \HRule \\[1.5cm]
  
 %----------------------------------------------------------------------------------------
@@ -117,15 +117,33 @@ Jugurtha \textsc{BELKALEM}\\[3cm] % Your name
 
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
+
+
 \emph{Tutor :}\\
 David \textsc{GARRIOU} % Your name rubini
+\begin{figure}[H]
+        			\includegraphics[scale=0.55]{img/smile.png}
+        			%\caption{SMILE opensource company logo}
+        			%\label{SMILE opensource company}
+   			 \end{figure}
+
 \end{flushleft}
 \end{minipage}
 %~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
+
 \emph{Supervisor :} \\
-Jalil \textsc{boukhobza} % Supervisor's Name
+Jalil \textsc{BOUKHOBZA} % Supervisor's Name
+
+
+\begin{figure}[H]
+\centering
+        			\includegraphics[scale=0.85]{img/ubo.png}
+        			%\caption{SMILE opensource company logo}
+        			%\label{SMILE opensource company}
+   			 \end{figure}
+
 \end{flushright}
 \end{minipage}\\[2cm]
 
@@ -135,7 +153,7 @@ Jalil \textsc{boukhobza} % Supervisor's Name
 %   DATE SECTION
 %----------------------------------------------------------------------------------------
 
-{\large \today}\\[2cm] % Date, change the \today to a set date if you want to be precise
+{\large 26/08/2018}\\[2cm] % Date, change the \today to a set date if you want to be precise
 
 %----------------------------------------------------------------------------------------
 %   LOGO SECTION
