--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-means.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-means.tex
@@ -1,4 +1,4 @@
-\section{Available equipements}
+\section{Internship required equipements}
 Debugging Linux is a challenging task which requires a good preparation. In this section We present a global overview of some of the equipement used during the internship.
 \subsection{Hardware platforms}
 
