--- a/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
+++ b/debug_linux_kernel/Final-Year-Project-Defense-M2LSE/internship-objectives.tex
@@ -1,4 +1,4 @@
-\section{General view of internship}
+\section{General overview of internship}
 
 \subsection{Introducing company}
 \textbf{SMILE} (\textbf{\color{blue}\url{https://www.smile.eu/en}}) is the 1st integrator and European expert in open source solutions (\textbf{Figure \ref{SMILE opensource company}}). 
@@ -23,7 +23,7 @@ SMILE advertises 4 different services as shown in \textbf{Figure \ref{SMILE open
 	\item[$\bullet$] \textbf{DIGITAL : } a division which creates websites, mobile apps and collaborative software. 
 	\item[$\bullet$] \textbf{BUSINESS APPS : } the service collects all business activities of customers allowing them to get better insight into their data and be more efficient. 
 	\item[$\bullet$] \textbf{EMBEDDED \& IOT : } which builds software for innovative smart objects.
-	\item[$\bullet$] \textbf{OUTSOURCING : } specialized in private cloud computing. 
+	\item[$\bullet$] \textbf{OUTSOURCING (INFRA) : } specialized in private cloud computing. 
 \end{itemize}
 
 
